--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
   },
   "devDependencies": {
     "@epic-web/config": "^1.18.3",
+    "@vitest/browser": "^3.1.3",
     "eslint": "^9.9.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest-browser-react": "^0.1.1"
   },
   "prettier": "@epic-web/config/prettier"
 }
